ajout de noms en com

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ window.onload = function(){
 		</div>
     <div class="columns">
 
-      <!-- Début du div de la première ville -->
+      <!-- KevinKevinKevinKevinKevinKevinKevinKevinKevinKevinKevin Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <div id="ville_Paris" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
@@ -73,7 +73,7 @@ window.onload = function(){
       </div>
       <!-- Fin du div de la première ville -->
 
-
+      <!-- JULIENJULIENJULIENJULIENJULIENJULIENJULIENJULIENJULIENJULIEN Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <div id="ville_Brest" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
@@ -93,6 +93,7 @@ window.onload = function(){
         </div>
       </div>
 
+      <!-- LESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLYLESLY Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <div id="ville_Quimper" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
@@ -112,6 +113,7 @@ window.onload = function(){
         </div>
       </div>
 
+      <!-- JACKSONJACKSONJACKSONJACKSONJACKSONJACKSONJACKSONJACKSONJACKSON Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <div id="ville_Bayonne" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
